--- a/css/main.css
+++ b/css/main.css
@@ -181,30 +181,7 @@ font-variant:small-caps;font-weight:300;
 
 .ribbon {color: #A00; font-size: 24px; float: right;}
 
-/* seminar details */
-.post_container{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:block;width:90%;max-width:800px;margin-left:auto;margin-right:auto;padding-top:2em;margin-bottom: 35px;}
-@media (max-width:960px){.post_container{padding-top:5px;}}
-.post_container__post__title{text-align:center;font-weight:400;border-bottom:1px rgba(94,121,128,0.2) solid;padding-bottom:.2em;line-height: 1.2em}
-@media (max-width:960px){.post_container__post__title{font-size:1.5em;border:0px;margin-bottom: 8px}}
-@media (min-width:768px){.post_container__post__title{font-size:1.8em}}
-.post_container__divider{padding-right: 20px; padding-left: 20px;text-align:center;color:rgba(94,121,128,0.2)}
-@media (min-width:768px){.post_container__divider{display: none}}
 
-.post_container__post__date{display:inline-block;padding-right:.5em}
-@media (max-width:960px){.post_container__post__date{font-size:.9rem;padding-right:0px}}
-.post_container__post__category{padding-left:.5em;border-left:2px solid rgba(30,34,34,0.1);padding-right:.5em}
-@media (max-width:960px){.post_container__post__category{display:block;border-left:0px;padding-left:0em}}
-@media (min-width:768px){.post_container__post__category{display:inline-block}}
-.post_container__post__pdf{padding-left:.5em;border-left:2px solid rgba(30,34,34,0.1);padding-right:.5em}
-@media (max-width:960px){.post_container__post__pdf{display:block;border-left:0px;padding-left:0em}}
-@media (min-width:768px){.post_container__post__pdf{display:inline-block}}
-.post_container__post__tags{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;height:100%;padding-left:.5em;border-left:2px solid rgba(30,34,34,0.1);padding-right:.5em;vertical-align:bottom}
-@media (max-width:960px){.post_container__post__tags{display:none}}
-@media (min-width:768px){.post_container__post__tags{display:inline-block}}
-.post_container__post__tag{display:inline-block;margin-left:.5em;background-color:#2077D8;font-size:.9em;padding-top:0;padding-bottom:0;padding-left:.4em;padding-right:.4em;border-radius:4px;line-height:1.1em;font-variant:small-caps;font-weight:500;text-transform:lowercase;color:white;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
-.post_container__post__date_value{margin-left:.5em;display:inline-block}
-.post_container__post__category_value{margin-left:.5em;display:inline-block}
-.post_container__post__pdf_value{margin-left:.5em;display:inline-block}
 
 
 .seminar_data{margin-top:1em;margin-bottom:1em;font-size:1.3em;line-height:1.5em; display:block;float: left;}
@@ -220,50 +197,29 @@ font-variant:small-caps;font-weight:300;
 .seminar_nazionale{color: blue;}
 
 /* schedule */
-.schedule-page {margin: 0 auto;}
-.schedule__title{font: bold 24px/38px "Open Sans Condensed",sans-serif;
-    text-align: center;margin: 5px;letter-spacing: 0.3em;
-    text-align: center;}
-.schedule__description{font-size: 1.1em;text-align: center}
-.schedule{text-align: center}
-@media (max-width:960px){.schedule__title{font-size: 20px; letter-spacing: 0.1em}.schedule__description{font-size: 0.9em}}
-
-.timetable{border-bottom:1px solid #fff;}
-table.timetable{width:95%;}
-td.time{text-align:center;width:15%;}
-td.instructor{width: 80px;text-align: center;}
-@media (max-width:960px){td.instructor{width: 20px;}}
-
-.traininghour{display: block; width: 100%}
-div.time {display: inline-block;width: 50px;text-align: center}
-div.instructor{display: inline-block;text-align: center; margin: 0 auto; width: 80%}
-@media (max-width:960px){div.instructor{width: 85%;}}
-@media (max-width:640px){div.instructor{width: 75%;}}
-
-div.tagbox{width: 100px;height: 40px;border: 1px solid #000;margin: 5px; display: inline-block; text-align: center;padding-top: 15px;}
-@media (max-width:960px){div.tagbox{font-size: 0.8em;width: 80px; height: 20px; padding-top: 2px}}
-
-.class_spacer{width:100px; display: block;height: 8px;}
-@media (max-width:960px){.class_spacer{height: 4px}}
-
-.adulti{background-color: #66A9D8;}
-.principianti{background-color: #7FD891;}
-.ragazzi{background-color: #D88A2F;}
-.bambini{background-color: #D8BF56;}
-.pesaro{background-color: #FEFEFE;}
-.rimini{background-color: #808080; color: #fff;}
-.onohaittoryu{background-color: #A2C2D8;}
+table.orario{font-size: 14px}
+tbody{}
+.dayh{text-align: center;}
+.time{min-height: 40px; padding-left: 5px; padding-right: 5px;}
+.adulti{background-color: #34558B; color:#fff;}
+.principianti{background-color: #7DCDB6;color:#fff;}
+.ragazzi{background-color: #F3C12C;color:#fff;}
+.bambini{background-color: #E87544;color:#fff;height: 40px;}
+.pesaro{background-color: #7DA0BD;}
+.rimini{background-color: #547144; color: #fff;}
+.onohaittoryu{background-color: #9DC6D8; color: #fff;}
 .libero{background-color: #ecf0f1;color:#000;}
-.hour {border: 1px solid #2E2E2E;text-align: center}
-.emptyspace {border: 0px;} 
+.hour {border: 1px solid #2E2E2E; text-align: center; padding:1px }
+.emptyspace {border-top: 0px; border-bottom: 0px} 
+.warn{color: #aaa;padding-top: 5px;display: block;border-top: 1px solid #F2F2F2;}
 
 @media(max-width:960px){
 .timeh{width:15%;}
 .dayh{width:10%;}
-.adulti{background-color: #3498db; color:#fff;}
-.principianti{background-color: #bdc3c7;color:#fff;}
-.ragazzi{background-color: #d35400;color:#fff;}
-.bambini{background-color: #e67e22;color:#fff;}
+.adulti{background-color: #34558B; color:#fff;}
+.principianti{background-color: #7DCDB6;color:#fff;}
+.ragazzi{background-color: #F3C12C;color:#fff;}
+.bambini{background-color: #E87544;color:#fff;}
 .pre-aikido{background-color: #f39c12;color:#fff;}
 .ken-jo{background-color: #34495e; color: #fff;}
 .yudansha{background-color: #2c3e50;color:#fff;}
