fixing oratorio layout

--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,7 @@ a.noborder  {border-bottom: 0px;text-decoration: none}
 .ev {font-weight: 400}
 .it {font-style: italic;}
 .ulined{border-bottom: 1px solid #005493;}
-
+.spacer{color: white;}
 
 @media (min-width:769px){.mobile{display:none}}
 @media (max-width:960px){.nomobile{display:none}}
