--- a/css/main.css
+++ b/css/main.css
@@ -264,6 +264,18 @@ ul.warn li:before {
   font-weight: normal;
 }
 
+.address:after {
+  content: "\f08e";
+  color: #005493;
+  font-family: FontAwesome;
+  margin-left: 5px;
+  display: inline;
+  vertical-align: middle;
+  font-size: 1em;
+  font-weight: normal;
+}
+
+
 /* news */
 .piecenews {
     display: block;
