--- a/css/main.css
+++ b/css/main.css
@@ -59,12 +59,6 @@ ul.active{margin: 0px;}
 .active{text-align: center;}
 @media (max-width:960px){.active{display:none;}}
 
-.icon__link_list {margin: 0em;padding-left:0px;text-align: center}
-.icon__link_list {box-sizing: border-box;list-style-type: none;}
-.icon__link_item {display: inline-block;width: 50px;color: #005493;padding-top: -0.5em;font-size:18px;line-height:15px}
-.icon__link_item_small {font-size:14px;padding-left:5px}
-.icon__link_menu {text-align: center; width: 50px;color: #005493;padding-top: -0.5em;font-size:18px;line-height:15px}
-
 /* main page */
 .mainpage{padding: 5px 20px;}
 .maintitle{font:18px/18px 'Lato', 'Open Sans Condensed',  sans-serif;}
@@ -374,8 +368,6 @@ a.noborder  {border-bottom: 0px;text-decoration: none}
 .ulined{border-bottom: 1px solid #005493;}
 .spacer{color: white;}
 
-@media (min-width:769px){.mobile{display:none}}
-@media (max-width:960px){.nomobile{display:none}}
 
 a.main_link{text-decoration: none;color: #005493;border: 0}
 
@@ -455,14 +447,15 @@ font-weight: 300;
 
 
 #navbar{border-bottom: 1px solid #F2F2F2; margin-bottom: 15px; margin-top: 5px }
-.navbar-nav {display: block;
-    margin: auto;
-}
+.navbar-nav {display: block;margin: auto;}
 @media (max-width:960px){#navbar{border-top: 1px solid #F2F2F2; margin-top: 15px}}
 
 
 
 .caption{font-family: "Open Sans Condensed",sans-serif;font-size: 20px;}
 @media (max-width:960px){.caption {font-size: 18px;}}
+
+@media (min-width:769px){.mobile{display:none}}
+@media (max-width:960px){.nomobile{display:none}}
 
 
