--- a/css/main.css
+++ b/css/main.css
@@ -460,4 +460,6 @@ font-weight: 300;
 @media (min-width:769px){.mobile{display:none}}
 @media (max-width:960px){.nomobile{display:none}}
 
+@media (min-width:1020px){.ontab{display:none}}
+@media (max-width:1020px){.notab{display:none}}
 
