--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css');
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic|Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,300,300italic,400italic,500,500italic,700,700italic);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+@import url(./font-awesome.min.css);
 
 /* blu #005493 */
 body,html{margin:0;padding:0;height:100%}
